feature/SPBR-29: Для автора используется отдельная таблица и сущность